feat: ogp setting

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:image" content="https://6or.cc/og.png" />
     <meta
       property="og:description"
-      content="Redirects to the URL created by the person of NIP-05. Check! The @ and after in the shortened URL is the NIP-05 domain."
+      content="Redirects to the URL created by the person of NIP-05. Check! The @ and after in the URL string is the NIP-05 domain."
     />
   </head>
   <body>
